# playwright-template

./: .gitignore  README.md  config_gen.py  main.py  pyproject.toml  sample-config.toml
app/: __init__.py  browser.py  config_reader.py  exceptions.py  gvs.py  metadata.py
